--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,8 +25,5 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file ./gaship/pom.xml
 
-    - name: Run SonarQube
-        shell: bash
-        run: |
-          cd ./gaship
-          mvn sonar:sonar -Dsonar.projectKey=${{secrets.SONAR_PROJECTKEY}} -Dsonar.host.url=${{secrets.SONAR_HOST}} -Dsonar.login=${{secrets.SONAR_TOKEN}}
+    - name: Run Sonar Cube
+      run : mvn sonar:sonar -Dsonar.projectKey=${{secrets.SONAR_PROJECT_KEY}} -Dsonar.host.url=${{secrets.SONAR_HOST_URL}} -Dsonar.login=${{secrets.SONAR_TOKEN}}
