--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,6 @@ jobs:
       run: mvn -B package --file ./gaship/pom.xml
 
     - name: Run Sonar Cube
-      shell: bash
-      run : cd ./gaship
-      |
+      run : |
+      cd ./gaship
       mvn sonar:sonar -Dsonar.projectKey=${{secrets.SONAR_PROJECT_KEY}} -Dsonar.host.url=${{secrets.SONAR_HOST_URL}} -Dsonar.login=${{secrets.SONAR_TOKEN}}
