--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,4 +32,4 @@ jobs:
         SONAR_TOKEN = ${{secrets.SONAR_TOKEN}}
       run : |
         cd ./gaship
-        mvn sonar:sonar -Dsonar.projectKey="$SONAR_PROJECTKEY" -Dsonar.host.url="$secrets.SONAR_HOST_URL" -Dsonar.login="$secrets.SONAR_TOKEN"
+        mvn sonar:sonar -Dsonar.projectKey="$SONAR_PROJECTKEY" -Dsonar.host.url="$SONAR_HOST_URL" -Dsonar.login="$SONAR_TOKEN"
