--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,9 +27,9 @@ jobs:
 
     - name: Run Sonar Cube
       env:
-        SONAR_PROJECTKEY = ${{secrets.SONAR_PROJECTKEY}}
-        SONAR_HOST_URL = ${{secrets.SONAR_HOST}}
-        SONAR_TOKEN = ${{secrets.SONAR_TOKEN}}
+        SONAR_PROJECTKEY: ${{secrets.SONAR_PROJECTKEY}}
+        SONAR_HOST_URL: ${{secrets.SONAR_HOST}}
+        SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
       run : |
         cd ./gaship
         mvn sonar:sonar -Dsonar.projectKey="$SONAR_PROJECTKEY" -Dsonar.host.url="$SONAR_HOST_URL" -Dsonar.login="$SONAR_TOKEN"
