--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,6 +35,8 @@ jobs:
         mvn sonar:sonar -Dsonar.projectKey="$SONAR_PROJECTKEY" -Dsonar.host.url="$SONAR_HOST_URL" -Dsonar.login="$SONAR_TOKEN"
 
     - name : Depoly
+        run: |
+          cd ./gaship
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SSH_IP }}
