--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,7 +41,7 @@ jobs:
         username: ${{ secrets.SSH_ID }}
         key: ${{ secrets.SSH_KEY }}
         port: ${{ secrets.SSH_PORT }}
-        source: "target/*.jar"
-        target: "~/gaship/"
+        source: "./gaship/target/*.jar"
+        target: "~/"
         rm: false
         script: "~/startup.sh"
