--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,7 +34,7 @@ jobs:
         cd ./gaship
         mvn sonar:sonar -Dsonar.projectKey="$SONAR_PROJECTKEY" -Dsonar.host.url="$SONAR_HOST_URL" -Dsonar.login="$SONAR_TOKEN"
 
-    - name : Depoly
+    - name : upload file
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.SSH_IP }}
@@ -44,4 +44,13 @@ jobs:
         source: "./gaship/target/*.jar"
         target: "~/"
         rm: false
-        script: "~/startup.sh"
+
+    - name: execute shell script
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SSH_IP }}
+        username: ${{ secrets.SSH_ID }}
+        key: ${{ secrets.SSH_KEY }}
+        port: ${{ secrets.SSH_PORT }}
+        script_stop: true
+        script: "./startup.sh"
